--- a/05-loop_prediction.Rmd
+++ b/05-loop_prediction.Rmd
@@ -9,7 +9,7 @@
 > The preprint is availible online: https://www.biorxiv.org/content/early/2018/02/01/257584.
 > My contributions to this publication is indicated in Table \@ref(tab:contribution). 
 > The source code of the complete analysis is available at GitHub: https://github.com/Juppen/sevenC and https://github.com/Juppen/sevenC_analysis.
-> Supplementary figures and links to supplementary tables are shown in Appendix \@ref(sup-loop-prediction).
+> Supplementary figures and links to supplementary tables are shown in Appendix \@ref(sup-loop).
 > 
 
 ### Abstract {-}
