--- a/index.Rmd
+++ b/index.Rmd
@@ -18,16 +18,19 @@ classoption: [
   captions=tableabove, 
   draft=false]
 papersize: a4
-bibliography: [bib/PhD.bib]
-biblio-style: unsrtnat
-csl: cell.csl
+bibliography: [bib/PhDclean.bib]
+biblio-style: myabbrvnat
+csl: american-journal-of-medical-genetics.csl
 link-citations: yes
 github-repo: ibn-salem/thesis
 description: "This is a draft PhD thesis."
 ---
 
 # Abstract {-}
+
+<!-- biblio-style: abbrvnat -->
 <!-- biblio-style: unsrtnat -->
+
 ```{r, echo = FALSE}
 # Set global options to not show code chunks
 knitr::opts_chunk$set(echo = FALSE)
